# jps-algo

./: pyproject.toml
jps/: __init__.py  main.py
jps/utils/: algo.py  merge.py  operation.py
tests/: test_jps.py
