[tool.poetry]
name = "jps"
version = "0.1.0"
description = "Jackson's Preemptive Schedule を解くためのアルゴリズムが実装されている"
repository = "https://github.com/tkp0331/jps-algo"
authors = ["鈴木貴大 <merioda.seven.24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
jsp-exp = "^0.1.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
